--- a/app/src/main/res/layout/activity_sounds_searchresults.xml
+++ b/app/src/main/res/layout/activity_sounds_searchresults.xml
@@ -110,8 +110,8 @@
                                 android:id="@+id/tv_videoscount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_alignParentBottom="true"
                                 android:layout_marginBottom="1dp"
+                                android:layout_marginLeft="5dp"
                                 android:layout_toRightOf="@+id/iv_videos"
                                 android:text="0" />
                         </RelativeLayout>
