--- a/app/src/main/res/layout/songslistcontainermodel.xml
+++ b/app/src/main/res/layout/songslistcontainermodel.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/tv_hashtagname"
+                    android:id="@+id/tv_songtitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Sports"
