--- a/app/src/main/res/layout/activity_select_sounds.xml
+++ b/app/src/main/res/layout/activity_select_sounds.xml
@@ -28,13 +28,13 @@
                 android:id="@+id/iv_mysounds"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@mipmap/add_friends"
+                android:src="@mipmap/mymusic"
                 android:padding="10dp"/>
             <ImageView
                 android:id="@+id/iv_close"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@mipmap/close_transparent"
+                android:src="@mipmap/white_close"
                 android:padding="10dp"/>
         </LinearLayout>
         <RelativeLayout
