--- a/app/src/main/res/layout/activity_select_sounds.xml
+++ b/app/src/main/res/layout/activity_select_sounds.xml
@@ -23,7 +23,8 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@mipmap/add_favwhite"
-                android:padding="10dp"/>
+                android:padding="10dp"
+                android:visibility="gone"/>
             <ImageView
                 android:id="@+id/iv_mysounds"
                 android:layout_width="50dp"
