--- a/app/src/main/res/layout/view_holder_exoplayer_basic.xml
+++ b/app/src/main/res/layout/view_holder_exoplayer_basic.xml
@@ -32,6 +32,7 @@
         android:visibility="gone"/>
 
     <RelativeLayout
+        android:id="@+id/layout_doubletap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="50dp"
