--- a/app/src/main/res/drawable/circlecornersrect_primary.xml
+++ b/app/src/main/res/drawable/circlecornersrect_primary.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- we define background color -->
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/color_hastag_bg" />
     <!-- add some padding for text inside -->
     <padding
         android:bottom="5dp"
