--- a/app/src/main/res/layout/activity_hashtag_searchresults.xml
+++ b/app/src/main/res/layout/activity_hashtag_searchresults.xml
@@ -60,6 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
                 <ImageView
+                    android:id="@+id/tag_image"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
