--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#7b13ee</color>
+    <color name="color_hastag_bg">#D77B13EE</color>
     <color name="colorPrimaryDark">#FF580CAB</color>
     <color name="colorAccent">#7b13ee</color>
     <color name="colorYellow">#ebae08</color>
