--- a/app/src/main/res/layout/effects_model.xml
+++ b/app/src/main/res/layout/effects_model.xml
@@ -19,19 +19,21 @@
                 android:id="@+id/iv_filterimage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#d4d1d7"
                 />
+
             <TextView
                 android:id="@+id/tv_filtername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:text="Filter Name"
-                android:gravity="center"
-                android:textColor="@android:color/black"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="5dp"/>
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:gravity="center"
+                android:text="Filter Name"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/colorPrimary" />
         </RelativeLayout>
 
     </RelativeLayout>
