--- a/app/src/main/res/layout/view_holder_exoplayer_basic.xml
+++ b/app/src/main/res/layout/view_holder_exoplayer_basic.xml
@@ -438,7 +438,7 @@
                     android:layout_height="20dp"
                     android:layout_margin="5dp"
                     android:layout_centerVertical="true"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/music_white"/>
                 <TextView
                     android:id="@+id/tv_musicscroll"
                     android:layout_width="wrap_content"
