--- a/app/src/main/res/layout/activity_invite_friends.xml
+++ b/app/src/main/res/layout/activity_invite_friends.xml
@@ -31,12 +31,25 @@
             android:textColor="@android:color/white"
             android:layout_centerInParent="true"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+        <TextView
+            android:id="@+id/tv_select_deselect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select All"
+            android:textColor="@android:color/white"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="5dp"
+            android:layout_marginRight="5dp"
+            />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/title_layout">
+        android:layout_below="@+id/title_layout"
+        android:layout_above="@+id/layout_invite">
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
@@ -44,6 +57,27 @@
             android:id="@+id/rv_list">
 
         </android.support.v7.widget.RecyclerView>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/layout_invite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_rectangle_primary"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
+       >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" Invite "
+            android:textColor="@android:color/white"
+            android:layout_margin="10dp"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_centerInParent="true"/>
 
     </RelativeLayout>
 </RelativeLayout>
