--- a/app/src/main/res/layout/fragment_me_.xml
+++ b/app/src/main/res/layout/fragment_me_.xml
@@ -26,7 +26,7 @@
                     android:id="@+id/iv_favourite"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@mipmap/add_favwhite"
+                    android:src="@mipmap/fav_n_w"
                     android:padding="10dp"/>
                 <ImageView
                     android:id="@+id/iv_addfriends"
