--- a/app/src/main/res/layout/activity_making_video.xml
+++ b/app/src/main/res/layout/activity_making_video.xml
@@ -56,7 +56,7 @@
             android:id="@+id/iv_switch"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@mipmap/camera_back"
+            android:src="@mipmap/camera_front"
             android:layout_margin="10dp"/>
 
         <ImageView
