--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -61,15 +61,16 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     >
-                <de.hdodenhof.circleimageview.CircleImageView
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/profile_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@mipmap/profile"
-                    app:civ_border_width="2dp"
-                    app:civ_border_color="#ffffff"
-                    />
+
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/profile_image"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginStart="0dp"
+                        android:src="@mipmap/profile"
+                        app:civ_border_color="#ffffff"
+                        app:civ_border_width="2dp" />
 
                     <ImageView
                         android:id="@+id/iv_addfriend"
@@ -178,6 +179,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Password"
+                    android:inputType="textPassword"
                     android:layout_margin="10dp"
                     android:layout_gravity="center"
                     android:layout_weight="1"
@@ -197,7 +199,7 @@
                         android:id="@+id/tv_change"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=" Change "
+                        android:text=" Change password"
                         android:textColor="@android:color/black"
                         />
 
