--- a/app/src/main/res/layout/activity_changepassword.xml
+++ b/app/src/main/res/layout/activity_changepassword.xml
@@ -56,7 +56,7 @@
             android:hint="Old password"
             android:layout_margin="10dp"
             android:layout_gravity="center"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:maxLength="12"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:background="@android:color/transparent"
@@ -94,7 +94,7 @@
             android:hint="New password"
             android:layout_margin="10dp"
             android:layout_gravity="center"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:maxLength="12"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:background="@android:color/transparent"
@@ -132,7 +132,7 @@
             android:hint="Confirm password"
             android:layout_margin="10dp"
             android:layout_gravity="center"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:maxLength="12"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:background="@android:color/transparent"
@@ -160,7 +160,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="  Change  "
+            android:text="  Update  "
             android:textColor="@android:color/white"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_margin="5dp"
