--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:maxLength="12"
-                android:hint="Enter Password"
+                android:hint="Password"
                 android:gravity="center"
                 android:background="@android:color/transparent"
                 android:layout_marginLeft="10dp"
