--- a/app/src/main/res/layout/activity_abuse_selection.xml
+++ b/app/src/main/res/layout/activity_abuse_selection.xml
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rate this Video"
+            android:text="Feedback"
             android:layout_gravity="center_vertical"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
@@ -105,7 +105,7 @@
         android:id="@+id/tv_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SUBMIT"
+        android:text="Submit"
         android:textColor="#fff"
         android:textStyle="bold"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
