--- a/app/src/main/res/layout/activity_playvideos_categorywise.xml
+++ b/app/src/main/res/layout/activity_playvideos_categorywise.xml
@@ -21,5 +21,15 @@
             />
 
     </RelativeLayout>
+    <TextView
+        android:id="@+id/tv_nodata"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No videos found"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
 </RelativeLayout>
